--- a/index.Rmd
+++ b/index.Rmd
@@ -271,51 +271,51 @@ the current revision.
   **Week 1**
     Lecture                         Course overview and organisation. Introduction to basic concepts
     Class                           **No class**
-    Coursepack                      Chapter \ref{c_intro}
+    Coursepack                      Chapter \@ref(c_intro)
 
   **Week 2**
     Lecture                         Descriptive statistics for categorical variables
     Class                           Introduction to SPSS. Descriptive statistics for categorical variables
-    Coursepack                      Sections \ref{s_descr1_intro}–\ref{s_descr1_2cat} and \ref{s_descr1_presentation}
+    Coursepack                      Sections \@ref(s_descr1_intro)–\@ref(s_descr1_2cat) and \@ref(s_descr1_presentation)
 
   **Week 3**
     Lecture & Class                 Descriptive statistics for continuous variables
-    Coursepack                      Sections \ref{s_descr1_1cont}–\ref{s_descr1_2cont}
+    Coursepack                      Sections \@ref(s_descr1_1cont)–\@ref(s_descr1_2cont)
 
   **Week 4**
     Lecture & Class                 Analysis of two-way contingency tables
-    Coursepack                      Chapters \ref{c_samples} and \ref{c_tables}
+    Coursepack                      Chapters \@ref(c_samples) and \@ref(c_tables)
 
   **Week 5**
     Lecture & Class                 Inference for means in two populations
-    Coursepack                      Chapters \ref{c_contd} and \ref{c_means}
+    Coursepack                      Chapters \@ref(c_contd) and \@ref(c_means)
 
   **Week 6**
     Reading Week                    **No lecture, no class**. Revision quiz available on Moodle.
 
   **Week 7**
     Lecture & Class                 Inference for proportions in one and two populations
-    Coursepack                      Chapter \ref{c_probs}
+    Coursepack                      Chapter \@ref(c_probs)
 
   **Week 8**
     Lecture & Class                 Correlation and simple linear regression as descriptive methods
-    Coursepack                      Sections \ref{s_regression_intro}–\ref{ss_regression_simple_est}
+    Coursepack                      Sections \@ref(s_regression_intro)–\@ref(ss_regression_simple_est)
 
   **Week 9**
     Lectures          
     Hour 1                          Inference for the simple linear regression model
     Hour 2                          Three-way contingency tables
     Class                           Simple linear regression
-    Coursepack                      Section \ref{ss_regression_simple_inf} (Hour 1); Section \ref{s_regression_causality} and Chapter \ref{c_3waytables} (Hour 2)
+    Coursepack                      Section \@ref(ss_regression_simple_inf) (Hour 1); Section \@ref(s_regression_causality) and Chapter \@ref(c_3waytables) (Hour 2)
 
   **Week 10**
     Lecture & Class                 Multiple linear regression
-    Coursepack                      Sections \ref{s_regression_multiple}–\ref{s_regression_rest}
+    Coursepack                      Sections \@ref(s_regression_multiple)–\@ref(s_regression_rest)
 
   **Week 11**
     Lecture                         Review and further statistical methods
     Class                           Discussion and additional exercise on multiple linear regression
-    Coursepack                      Chapter \ref{c_more}
+    Coursepack                      Chapter \@ref(c_more)
   --------------------------------- -------------------------------------------------------------------------------------------------------------------------------
 
 \newpage
